--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                 <artifactId>maven-release-plugin</artifactId>
+                 <version>XXX</version>
+                 <configuration>
+                     <scmCommentPrefix>[ci skip]</scmCommentPrefix>
+                 </configuration>
+             </plugin>
         </plugins>
     </build>
 </project>
