--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     </properties>
     <scm>
         <connection>scm:git:${project.scm.url}</connection>
@@ -44,7 +45,7 @@
             </plugin>
             <plugin>
                  <artifactId>maven-release-plugin</artifactId>
-                 <version>XXX</version>
+                 <version>${maven-release-plugin.version}</version>
                  <configuration>
                      <scmCommentPrefix>[ci skip]</scmCommentPrefix>
                  </configuration>
